# SIRPA

./: .gitignore  README.md  README.org  docker-compose.yml  pyc_to_gitignore.sh
.trunk/: trunk.yaml
backend/: .env  Dockerfile-fastapi  README.org
backend/api/: pyproject.toml
backend/api/api/: crypt.py  database.py  jwtoken.py  main.py  models.py  oauth2.py  schemas.py  sirpa.code-workspace  utils.py
backend/api/api/db/: alunos.py  aulas.py  docentes.py  ucs.py  user.py
backend/api/api/model/: user.py
backend/api/api/models/: classes.py  course.py  helpers.py  student.py  teacher.py  uc.py  user.py
backend/api/api/orm/: alunos.py  user.py
backend/api/api/routers/: auth.py  classes.py  course.py  helpers.py  student.py  teacher.py  uc.py  user.py
backend/api/api/schemas/: alunos_schema.py  class_schema.py  courses_schema.py  docentes_schema.py  nm_schema.py  presences_schema.py  schedules_schema.py  semester_schema.py  student_schema.py  teacher_schema.py  token_schema.py  uc_schema.py  user_schema.py  year_schema.py
backend/api/api/tools/: crypt.py
backend/api/tests/: test_api.py
frontend/: .env  Dockerfile  README.org  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  utils.js
frontend/src/_services/: crudServices.js  ucServices.js  userService.js
frontend/src/components/: Header.js  Nav.js
frontend/src/components/UI/: BurgerMenu.js  Html5QrcodeReader.js  Navigation.js  PasswordModal.js  QRCodeModal.js
frontend/src/components/auth/: Login.js
frontend/src/components/students/: ClassSchedule.js
frontend/src/pages/: Login.js  Student.js  Today.js  TodayStudent.js  TodayTeacher.js  UCs.js
frontend/src/store/: auth-context.js
(+5 files in other folders)
